<?xml version="1.0" encoding="utf-8"?><!--작성자 : 이조은 -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:src="@drawable/copyright" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:text="@string/info"
            android:textSize="40dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_t"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VISIT SEOUL NET"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://www.visitseoul.net/index"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_r"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://www.cha.go.kr"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myname"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/slidingMenuPage"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#886a6b6d"
            android:orientation="vertical"
            android:visibility="invisible"
            >

            <Button
                android:text="@string/tourinfo"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TourInfoBtn"
                android:onClick="onClickTourInfoBtn" />


            <Button
                android:text="@string/info"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/InfoBtn"
                android:onClick="onClickInfoBtn"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text=""
                android:background="#00ffffff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/backBtn"
                android:onClick="onClickBack"
                android:visibility="invisible"
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
