<?xml version="1.0" encoding="utf-8"?>
<!--작성자 : 박보현 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:queryHint="@string/input_search"
            android:id="@+id/searchView" />

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:id="@+id/keyword_search_btn"
            android:onClick="onButtonClick1"
            android:background="@drawable/enterbutton"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:layout_height="wrap_content"
            android:id="@+id/cate_spinner"
            android:spinnerMode="dropdown"
            android:layout_width="95dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/sub_cate_spinner"
            />

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/enterbutton"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:id="@+id/cate_search_btn"
            android:onClick="onButtonClick2"
             />
    </LinearLayout>


    <ListView
        android:id="@+id/search_list"
        android:orientation="vertical"
        android:divider="#ccc"
        android:dividerHeight="0.5dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/slidingMenuPage"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#886a6b6d"
            android:orientation="vertical"
            android:visibility="invisible"
            >

            <Button
                android:text="@string/tourinfo"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TourInfoBtn"
                android:onClick="onClickTourInfoBtn" />


            <Button
                android:text="@string/info"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/InfoBtn"
                android:onClick="onClickInfoBtn"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text=""
                android:background="#00ffffff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/backBtn"
                android:onClick="onClickBack"
                android:visibility="invisible"
                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>